--- a/densitytable.tex
+++ b/densitytable.tex
@@ -5,26 +5,26 @@
 \tablehead{Planet & $P$ & $F$ & $r_p$ & $m_p$ & $\rho_p$ & Method & Composition & Refs. \\
 name & $[$days$]$ & $[\text{F}_{\oplus}]$ & $[\text{R}_{\oplus}]$ & $[\text{M}_{\oplus}]$ & $[\text{g cm}^{-3}]$ && disposition & }
 \startdata
-GJ 143b & 35.61253 & 5.5 & 2.61 & 22.70 & 7.09 & RV & Ter & 1 \\
-GJ 357b & 3.93072 & 13.2 & 1.22 & 1.84 & 5.67 & RV & Ter & 2 \\
-GJ 1132b & 1.62892 & 19.4 & 1.13 & 1.66 & 6.39 & RV & Ter & 3,4 \\
+GJ 143b & 35.61253 & 5.5 & 2.61 & 22.70 & 7.09 & RV & Rock & 1 \\
+GJ 357b & 3.93072 & 13.2 & 1.22 & 1.84 & 5.67 & RV & Rock & 2 \\
+GJ 1132b & 1.62892 & 19.4 & 1.13 & 1.66 & 6.39 & RV & Rock & 3,4 \\
 GJ 1214b & 1.58040 & 22.2 & 2.85 & 6.26 & 1.50 & RV & Gas & 5 \\
-GJ 4332b & 1.40150 & 144.2 & 1.39 & 4.60 & 9.51 & RV & Ter & 6 \\
-GJ 9827b & 1.20898 & 326.9 & 1.58 & 4.91 & 6.95 & RV & Ter & 7 \\
+GJ 4332b & 1.40150 & 144.2 & 1.39 & 4.60 & 9.51 & RV & Rock & 6 \\
+GJ 9827b & 1.20898 & 326.9 & 1.58 & 4.91 & 6.95 & RV & Rock & 7 \\
 GJ 9827d & 6.20147 & 37.0 & 2.02 & 4.04 & 2.71 & RV & Am & 7 \\
-HD 219134b & 3.09293 & 176.7 & 1.60 & 4.74 & 6.40 & RV & Ter & 8 \\
-HD 219134c & 6.76458 & 62.3 & 1.51 & 4.36 & 7.01 & RV & Ter & 8 \\
+HD 219134b & 3.09293 & 176.7 & 1.60 & 4.74 & 6.40 & RV & Rock & 8 \\
+HD 219134c & 6.76458 & 62.3 & 1.51 & 4.36 & 7.01 & RV & Rock & 8 \\
 K2-18b & 32.93962 & 1.2 & 2.71 & 8.63 & 2.40 & RV & Gas & 9,10 \\
 K2-146b & 2.64460 & 19.2 & 2.05 & 5.77 & 3.72 & TTV & Am & 11 \\
 K2-146c & 4.00498 & 11.0 & 2.19 & 7.49 & 3.96 & TTV & Am & 11 \\
-K2-216b & 2.17480 & 1837.4 & 1.75 & 8.00 & 8.28 & RV & Ter & 12 \\
+K2-216b & 2.17480 & 1837.4 & 1.75 & 8.00 & 8.28 & RV & Rock & 12 \\
 Kepler-80b & 7.05246 & 41.8 & 2.67 & 6.93 & 2.02 & TTV & Gas & 13 \\
 Kepler-80c & 9.52355 & 28.0 & 2.74 & 6.74 & 1.82 & TTV & Gas & 13 \\
-Kepler-80d & 3.07222 & 126.5 & 1.53 & 6.75 & 10.46 & TTV & Ter & 13 \\
-Kepler-80e & 4.64489 & 72.9 & 1.60 & 4.13 & 5.60 & TTV & Ter & 13 \\
-L 98-59c & 3.69040 & 11.9 & 1.35 & 2.46 & 5.55 & RV & Ter & 14,15 \\
-LHS 1140b & 24.73696 & 0.5 & 1.73 & 6.98 & 7.52 & RV & Ter & 16 \\
-LHS 1140c & 3.77793 & 6.1 & 1.28 & 1.81 & 4.77 & RV & Ter & 16
+Kepler-80d & 3.07222 & 126.5 & 1.53 & 6.75 & 10.46 & TTV & Rock & 13 \\
+Kepler-80e & 4.64489 & 72.9 & 1.60 & 4.13 & 5.60 & TTV & Rock & 13 \\
+L 98-59c & 3.69040 & 11.9 & 1.35 & 2.46 & 5.55 & RV & Rock & 14,15 \\
+LHS 1140b & 24.73696 & 0.5 & 1.73 & 6.98 & 7.52 & RV & Rock & 16 \\
+LHS 1140c & 3.77793 & 6.1 & 1.28 & 1.81 & 4.77 & RV & Rock & 16
 \enddata
 \tablecomments{References: 1) \citealt{dragomir19} 2) \citealt{luque19} 3) \citealt{dittmann17b} 4) \citealt{bonfils18} 5) \citealt{harpsoe13} 
 6) Astudillo-Defru et al. in prep. 7) \citealt{rice19} 8) \citealt{gillon17}
