--- a/radvalley.tex
+++ b/radvalley.tex
@@ -105,7 +105,7 @@ of Toronto, 50 St. George Street, Toronto, ON, M5S 3H4, Canada}
   bears the opposite sign from that measured around Sun-like stars suggesting that
   thermally driven atmospheric mass loss may not dominate the evolution of planets in the low stellar mass
   regime or that we are witnessing the emergence of a separate channel of planet formation.
-  The latter notion is supported by the relative occurrence of terrestrial to gaseous planets
+  The latter notion is supported by the relative occurrence of rocky to non-rocky planets
   which increases from $0.5\pm 0.1$ to $8.5\pm 4.6$ from mid-K to mid-M dwarfs.
   Furthermore, the location of the radius valley features are shown to shift to smaller sizes with
   decreasing stellar mass in agreement with physical models of photoevaporation,
@@ -113,8 +113,8 @@ of Toronto, 50 St. George Street, Toronto, ON, M5S 3H4, Canada}
   %insufficient to robustly identify the dominant formation pathway of the radius valley,
   %such inferences may be obtained by \tess{} with $\mathcal{O}(85,000)$
   %mid-to-late M dwarfs observed with 2 minute cadence.
-  \textbf{These measurements precisely indicate the subset of planetary orbital periods and radii
-    that should be targeted in radial velocity surveys to resolve the rocky-to-gaseous transition
+  \textbf{The measurements presented herein precisely indicate the subset of planetary orbital periods and radii
+    that should be targeted in radial velocity surveys to resolve the rocky to non-rocky transition
     around low mass stars.}  
 \end{abstract}
 
@@ -128,14 +128,14 @@ type of planet around Sun-like stars and early M dwarfs alike
 \citep[e.g.][]{youdin11,howard12,dressing13,fressin13,petigura13b,morton14,dressing15a,mulders15a,gaidos16,fulton17,hardegree19}.
 Furthermore, mass measurements of many of these transiting planets via transit-timing variations
 or precision radial velocity measurements revealed that the majority of planets
-smaller than $\sim 1.6$ R$_{\oplus}$ are consistent with having bulk terrestrial compositions
+smaller than $\sim 1.6$ R$_{\oplus}$ are consistent with having bulk rocky compositions
 \citep[e.g.][]{weiss14,dressing15b,rogers15}.
 
 Early studies of the \kepler{} planet population
 hinted that planets at small orbital separations exhibited a
 bimodal radius distribution \citep[e.g.][]{owen13}---commonly referred to as the radius valley---that
 is thought to be representative of a population of small, predominantly rocky planets plus a population
-of inflated gaseous planets that have retained significant H/He envelopes.
+of inflated non-rocky planets that have retained significant H/He envelopes.
 Consequently, numerous studies of planet formation and evolution sought to explain the
 apparent bimodality. One such proposed mechanism is
 that of photoevaporation wherein the gaseous envelopes of small close-in planets may be stripped by
@@ -147,8 +147,8 @@ luminosity from a planetary core's primordial energy reservoir from formation dr
 over Gyr timescales \citep{ginzburg18,gupta19a,gupta19b}.
 Impact erosion by planetesimals may also drive the emergence of the radius valley either by atmospheric
 stripping or by the growth of volatile-rich secondary atmospheres \citep{shuvalov09,schlichting15,wyatt19}. 
-An alternative explanation to the processing of primorial atmospheres is the formation of distinct gaseous and
-terrestrial planet populations with the latter invoking gas-poor formation wherein gas accretion is delayed
+An alternative explanation to the processing of primorial atmospheres is the formation of distinct rocky and
+non-rocky planet populations with the former invoking gas-poor formation wherein gas accretion is delayed
 by dynamical friction whilst the
 planetary core is still embedded within the protoplanetary disk until a point at which the gaseous disk
 has almost completely dissipated after just a few Myrs \citep{lee14,lee16,lopez18}.
@@ -162,9 +162,8 @@ A variety of trends were also observed in either
 the raw or in the completeness-corrected (i.e. the occurrence rate) distributions. Firstly,
 the location of the radius valley around FGK stars is period-dependent with slope
 $\mathrm{d}\log{r_p} / \mathrm{d}\log{P} \sim -0.1$ \citep{vaneylen18,martinez19}, a result that is consistent
-with both photoevaporation and core-powered mass loss models but is largely inconsistent with impact erosion
-and the late formation of
-terrestrial planets in a gas-poor environment. Secondly, the feature locations (i.e. the weighted
+with both photoevaporation and core-powered mass loss models but is largely inconsistent with the late formation
+of terrestrial planets in a gas-poor environment. Secondly, the feature locations (i.e. the weighted
 average radius of the peaks and valley) appear to exist at smaller planet radii with decreasing stellar
 mass \citep{fulton18,wu19}.
 
@@ -419,7 +418,7 @@ completeness in this region. Any features resembling the radius valley are not p
 distribution. Assuming that the radius valley around Sun-like stars persists in some form around low
 mass stars, the fact that a distinct valley is not visible in the empirical planet population
 highlights the importance of measuring valley
-features from the completeness-corrected planet distribution. Alternatively, the valley---close to the expected rocky-to-gaseous
+features from the completeness-corrected planet distribution. Alternatively, the valley---close to the expected rocky to non-rocky
 transition of $\sim 1.5-1.8$ R$_{\oplus}$ \citep{weiss14}---may not be entirely void of planets. Indeed there exists a
 signficant subset of confirmed planets between 1.5-1.8 R$_{\oplus}$ with periods out to $\sim 12$ days indicating that
 the mechanism responsible for producing the radius valley might not be as efficient as it is when operating on planetary
@@ -694,8 +693,9 @@ occurrence rate of $2.83\pm 0.36$ planets per star.
     characterized via asteroseismology \citep[\emph{dashed line},][]{vaneylen18} and the approximate radius
     valley around mid-K to early-M dwarfs \citep[\emph{dotted line},][]{wu19}. Also overplotted are planets
     with $\geq 3\sigma$ bulk density measurements from the literature that are classified as having either
-    a terrestrial (\emph{circles}), a gaseous (\emph{triangles}), or an ambiguous (\emph{squares}) bulk
-    composition. The shaded region indicates where the \kepler{} sensitivity falls below 10\%.} 
+    a rocky (\emph{circles}), a gaseous (\emph{triangles}), or an ambiguous (\emph{squares}) bulk
+    composition. Marker colors are indicative of the MAP planet bulk densities. 
+    The shaded region indicates where the \kepler{} sensitivity falls below 10\%.} 
   \label{fig:fmap}
 \end{figure*}
 
@@ -717,7 +717,7 @@ Planet parameters are retrieved from the NASA Exoplanet Archive for planets orbi
 \teff{} $\in[2800,4700]$ K, whose orbital periods and radii span the domain considered in \autoref{fig:fmap},
 and whose masses are inconsistent with zero (i.e. no mass upper limits).
 The properties of the resulting 20 planets are listed in \autoref{table:rhop}. Based on the
-planetary bulk densities $\rho_p$ we define the following composition dispositions: terrestrial
+planetary bulk densities $\rho_p$ we define the following composition dispositions: rocky
 dispositions
 have $\rho_p+\sigma_{\rho_p} \geq 5.5$ g cm$^{-3}$ and $\rho_p-\sigma_{\rho_p} \geq 3.5$ g cm$^{-3}$,
 gaseous dispositions 
@@ -727,14 +727,14 @@ terrestrial-like or likely hosting a significant gaseous envelope).
 
 The vast majority of the retrieved planets in \autoref{fig:fmap}
 demonstrate clear composition clustering with planet radius.
-With the exception of the probable terrestrial planet GJ 143b ($P=35.6$ days, $r_p=2.6$ R$_{\oplus}$),
-all terrestrial planets appear to be smaller than 1.8 R$_{\oplus}$ independently of orbital period.
+With the exception of the probable rocky planet GJ 143b ($P=35.6$ days, $r_p=2.6$ R$_{\oplus}$),
+all rocky planets appear to be smaller than 1.8 R$_{\oplus}$ independently of orbital period.
 Similarly, all four gaseous planets are larger than 2.6 R$_{\oplus}$ while the three remaining planets
 with intermediate radii correspond to those with ambiguous bulk compositions. 
 Thus we are justified in classifying the occurrence rate peak spanning $\sim 0.9-1.4$ R$_{\oplus}$
-as representing terrestrial planets. The second peak between $\sim 1.9-2.3$ R$_{\oplus}$ hosts
-planets with ambiguous bulk compositions but are clearly inconsistent with being terrstrial
-such that we will refer to this feature as the gaseous peak in what follows.
+as representing rocky planets. The second peak between $\sim 1.9-2.3$ R$_{\oplus}$ hosts
+planets with ambiguous bulk compositions but are clearly inconsistent with being rocky
+such that we will refer to this feature as the non-rocky peak in what follows.
 
 \input{densitytable}
 
@@ -767,14 +767,15 @@ $r_p\lesssim 1$ R$_{\oplus}$ where the detection sensitivity is poor.
     accompanied by the same occurrence rates but with finer radius bins.
     The corresponding occurrence rate uncertainties per bin are inflated but the bimodal structure continues
     to be exhibited in the MAP occurrence rates. The shaded regions highlight our approximate
-    definitions of terrestrial planets ($r_p \in [0.97,1.54]$ R$_{\oplus}$), down to reasonable sensitivity limits,
-    and gaseous planets ($r_p > 1.54$ R$_{\oplus}$) around low mass stars. Note the 2.5 R$_{\oplus}$ outer limit of
+    definitions of rocky planets ($r_p \in [0.97,1.54]$ R$_{\oplus}$), down to reasonable sensitivity limits,
+    and non-rocky planets ($r_p > 1.54$ R$_{\oplus}$) around low mass stars. Note the 2.5 R$_{\oplus}$ outer limit of
     the shaded region is chosen arbitrarily.}
   \label{fig:rphist}
 \end{figure*}
 
-From the bimodal distribution we highlight the approximate radii likely corresponding to planets with terrestrial
-bulk compositions ($r_p\lesssim 1.54$ R$_{\oplus}$) versus planets with significant size fractions in a gaseous
+From the bimodal distribution we highlight the approximate radii likely corresponding to planets with rocky
+bulk compositions ($r_p\lesssim 1.54$ R$_{\oplus}$) versus planets with significant size fractions in a volatile-rich
+or extended H/He gaseous
 envelope ($r_p\gtrsim 1.54$ R$_{\oplus}$) around
 low mass stars. Also depicted in \autoref{fig:rphist} is $f_j$ with a bin width half that of the principal
 $f_j$ depiction (i.e. 0.06 R$_{\oplus}$ compared to 0.13 R$_{\oplus}$).
@@ -833,7 +834,7 @@ The radius valley continues to be resolved in
 the MAP occurrence rates. Furthermore, the addition of PCs reduces the median $f_j$ uncertainty among planets
 with $r_p>1$ R$_{\oplus}$ from
 0.0216 to 0.0186 planets per star (i.e. $\sim 15$\% improvement). However, the partial filling of the gap is
-further substantiated as the contrast between the maximum $f_j$ of the terrestrial planet peak ($r_p \sim 1.3$ R$_{\oplus}$)
+further substantiated as the contrast between the maximum $f_j$ of the rocky planet peak ($r_p \sim 1.3$ R$_{\oplus}$)
 and the minimum $f_j$ of the valley ($r_p \sim 1.6$ R$_{\oplus}$) decreases from 0.070
 to 0.054 R$_{\oplus}$ (i.e. $3.2\sigma \to 2.9\sigma$). Contamination by true FPs in the planet sample containing
 PCs may contribute to the reduced significance of the valley so we revert to considering confirmed planets only
@@ -860,7 +861,7 @@ for the remainder of this study.
 our planet sample as well as for the close-in \kepler{} planets around Sun-like stars
 from \cite{martinez19}.
 In this parameter space we calculate the slope of the radius valley with $F$ and compare the measured
-value to model predictions of the transition from terrestrial to gaseous planets
+value to model predictions of the transition from rocky to non-rocky planets
 versus insolation. We measure the slope by resampling $10^3$ planet populations from the inverse
 occurrence rates (and their fractional uncertainties at each point $ij$) over the domains
 $F\in [1,30]$ F$_{\oplus}$ and $r_p\in [1,2.5]$ R$_{\oplus}$.
@@ -879,14 +880,15 @@ space yields $\text{d}r_p / \text{d}\log{P} = 0.085\pm 0.074$.
     \emph{Upper panel}: the maximum a-posteriori occurrence
     rate map calculated from the population of confirmed planets from \kepler{} (\emph{circles}) and
     \ktwo{} (\emph{diamonds}) around low mass dwarf
-    stars. Overplotted in black are model predictions of the transition from terrestrial to gaseous
+    stars. Overplotted in black are model predictions of the transition from rocky to non-rocky
     planets in the following scenarios: core-powered mass loss \citep{gupta19b}, photoevaporation
     \citep{lopez18}, and gas-poor formation \cite{lopez18}. We measure the slope of the radius valley
     to be $\text{d}r_p / \text{d}\log{F} = -0.123\pm 0.054$ which is consistent with predictions
     from gas-poor formation of terrestrial planets. Also overplotted are planets
     with $\geq 3\sigma$ bulk density measurements from the literature that are classified as having either
-    a terrestrial (\emph{circles}), a gaseous (\emph{triangles}), or an ambiguous (\emph{squares}) bulk
-    composition. \emph{Lower panel}: the occurrence rate map of close-in
+    a rocky (\emph{circles}), a gaseous (\emph{triangles}), or an ambiguous (\emph{squares}) bulk
+    composition. Marker colors are indicative of the MAP planet bulk densities.
+    \emph{Lower panel}: the occurrence rate map of close-in
     \kepler{} planets around Sun-like stars \citep[$\text{d}\log{r_p}/\text{d}\log{F} = 0.12\pm 0.02$][]{martinez19}.
     %The measured slopes for the planet populations around Sun-like and low mass stars have opposing signs.
     Note the unique $F$ and $r_p$ scales compared to the top panel.}
@@ -896,10 +898,10 @@ space yields $\text{d}r_p / \text{d}\log{P} = 0.085\pm 0.074$.
 The negative slope of $\text{d}r_p / \text{d}\log{F} = -0.123$ indicates that the location of the radius valley
 drops to smaller planet radii with increasing insolation (i.e. towards smaller orbital separations).
 This behavior
-is broadly consistent with models of the formation small terrestrial planets in a gas-poor environment
+is broadly consistent with models of the formation small rocky planets in a gas-poor environment
 \citep{lee14,lee16,lopez18}. This formation scenario
-leads to the transition from terrestrial to gaseous planets emerging due to the
-superposition of terrestrial and gaseous planet populations whose formation timescales differ. In this scenario, the
+leads to the transition from rocky to non-rocky planets emerging due to the
+superposition of rocky and non-rocky planet populations whose formation timescales differ. In this scenario, the
 transition radius as a function of orbital separation is set by the maximum mass of a bare rocky core which
 itself is set by the amount of available solid material for the proto-planet to form out of via collisional
 growth. According to the
@@ -928,10 +930,10 @@ around low mass stars, or that the efficiency of atmospheric post processing wea
 
 
 The inclusion of planets with $\geq 3\sigma$ bulk density measurements (see \autoref{table:rhop}) in
-\autoref{fig:fmapF} reveals that all planets that are inconsistent with having bulk terrestrial
+\autoref{fig:fmapF} reveals that all planets that are inconsistent with having bulk rocky
 compositions lie above the transition radius predictions from all physical models considered
 (i.e. gas-poor formation, photoevaporation, core-powered mass loss, and impact erosion). However, the
-temperate terrestrial planet LHS 1140b ($F=0.5$ F$_{\oplus}$, $r_p=1.7$ R$_{\oplus}$) sits in the $F-r_p$ parameter
+temperate rocky planet LHS 1140b ($F=0.5$ F$_{\oplus}$, $r_p=1.7$ R$_{\oplus}$) sits in the $F-r_p$ parameter
 space below the predicted transition radius from gas-poor formation but above the predicted transition from
 photoevaporation, core-powered mass loss, and impact erosion. Although LHS 1140b is the only instance of a planet
 existing between the radius valley predictions from gas-poor formation and thermally driven or impact driven
@@ -966,48 +968,48 @@ M$_{\odot}$ (i.e. $\sim 62$\% of our confirmed planet sample).
     which represent the full stellar sample ($M_s \in [0.08,0.93]$ M$_{\odot}$), the massive half of the stellar sample
     ($M_s \in [0.65,0.93]$ M$_{\odot}$), the low mass half of the stellar sample ($M_s \in [0.08,0.65]$ M$_{\odot}$),
     and the lowest mass bin ($M_s \in [0.08,0.42]$ M$_{\odot}$) depicting a subset of the low mass half of the stellar
-    sample. Terrestrial planets appear to increase in prominence around lower mass stars.}
+    sample. Rocky planets appear to increase in prominence around lower mass stars.}
   \label{fig:rphistcomp}
 \end{figure*}
 
-In considering stars less massive than 0.65 M$_{\odot}$, the gaseous planet peak begins to diminish relative
+In considering stars less massive than 0.65 M$_{\odot}$, the non-rocky planet peak begins to diminish relative
 to the terrestrial-sized planets. As evidenced in the MAP $f_j$ distribution around stars with
-$M_s \in [0.08,0.65]$ M$_{\odot}$, the radius valley might persist around 1.6 R$_{\oplus}$ but the gaseous planet
-peak does not appear distinct from the terrestrial planet peak in the MAP $f_{ij}$ map. That is that the relative
-frequency of terrestrial to gaseous planets appears to increase significantly around M dwarfs compared to the more
+$M_s \in [0.08,0.65]$ M$_{\odot}$, the radius valley might persist around 1.6 R$_{\oplus}$ but the non-rocky planet
+peak does not appear distinct from the rocky planet peak in the MAP $f_{ij}$ map. That is that the relative
+frequency of rocky to non-rocky planets appears to increase significantly around M dwarfs compared to the more
 massive K dwarfs. This feature is further accentuated around the lowest mass stars in our sample ($<0.42$
 M$_{\odot}$) for which terrestrial-sized planets clearly dominate the distribution of close-in planets. The relative
-frequency of terrestrial to gaseous planets in each stellar mass bin are reported in \autoref{tab:rel}
+frequency of rocky to non-rocky planets in each stellar mass bin are reported in \autoref{tab:rel}
 for fixed definitions of $r_p \in [1,1.6]$ R$_{\oplus}$ and $r_p \in [1.6,2.5]$ R$_{\oplus}$ respectively. The inner
 limit of 1 R$_{\oplus}$ restricts this analysis to where the detection sensitivity is still informative. The outer
-limit of 2.5 R$_{\oplus}$ is chosen such that the full width at half maximum of the gaseous planet peak in the
+limit of 2.5 R$_{\oplus}$ is chosen such that the full width at half maximum of the non-rocky planet peak in the
 $f_j$ distribution from the full stellar sample is approximately identical for each peak (\autoref{fig:rphist})
 but is still somewhat arbitrary.
 
 \input{reltable}
 
-The values in \autoref{tab:rel} indicate the significant increase in the relative occurrence of terrestrial
+The values in \autoref{tab:rel} indicate the significant increase in the relative occurrence of rocky
 planets with decreasing stellar mass that is illustrated in \autoref{fig:rphistcomp}. Our measurements show
-that gaseous planets are nearly twice as common as terrestrial planets
+that non-rocky planets are nearly twice as common as rocky planets
 around mid to late K dwarfs ($M_s \in [0.65,0.93]$ M$_{\odot}$) while the relative frequency approaches unity
 around the full suite of M dwarfs ($M_s \in [0.08,0.65]$ M$_{\odot}$). Focusing on mid-to-late M dwarfs only in
-the lowest stellar mass bin considered, terrestrial planets become much more prominent as they outnumber gaseous
+the lowest stellar mass bin considered, rocky planets become much more prominent as they outnumber non-rocky
 planets by a factor of $\sim 8.5\pm 4.6$. This result is broadly
 consistent with the calculations from \cite{hardegree19} who find that terrestrial-sized 
-planets ($r_p \in[0.5,1.5]$ R$_{\oplus}$) are about $4-5$ times as common as gaseous planets ($r_p \in [1.5,2.5]$
+planets ($r_p \in[0.5,1.5]$ R$_{\oplus}$) are about $4-5$ times as common as non-rocky planets ($r_p \in [1.5,2.5]$
 R$_{\oplus}$) around M3-5.5 dwarfs ($M_s \in [0.12,0.38]$ M$_{\odot}$). 
-Our calculations provide supporting evidence for an increase in the frequency of close-in terrestrial planets
+Our calculations provide supporting evidence for an increase in the frequency of close-in rocky planets
 around increasingly lower mass stars even with the small number of confirmed transiting planets in that mass
-regime. More robust statements regarding the absolute occurrence rate of terrestrial planets around mid-to-late
+regime. More robust statements regarding the absolute occurrence rate of rocky planets around mid-to-late
 M dwarfs will require a larger stellar sample in transit surveys with sensitivity to wider separations out to
 hundreds of days where giant planets begin to emerge around these stars \citep{bonfils13,morales19}.
 
-Although our data show a significant increase in the relative occurrence of terrestrial to gaseous planets
+Although our data show a significant increase in the relative occurrence of rocky to non-rocky planets
 around increasingly lower mass stars, we are unable to firmly identify the cause of this trend with these data.
 That is that there are two outstanding hypotheses that cannot be ruled out by our data. The first scenario
-requires the preferential formation of terrestrial planets around low mass stars such that atmospheric processing
+requires the preferential formation of rocky planets around low mass stars such that atmospheric processing
 by photoevaporation, core-powered mass loss, or impact erosion, have little to no effect. The alternative scenario
-is that planet formation processes around low mass stars continues to produce gaseous planets with significant
+is that planet formation processes around low mass stars continues to produce non-rocky planets with significant
 primordial atmospheres that are subsequently stripped by any of the aforementioned processes. The slope of the
 valley measured from \autoref{fig:fmapF} suggests that the former scenario is important but our calculations of
 the occurrence rates in various stellar mass bins are unable to solely confirm or reject any physical mechanism
@@ -1017,8 +1019,8 @@ at this time.
 \subsection{Dependence of radius valley features on stellar mass}
 Here we measure the locations and uncertainties of features in the radius valley in each of the stellar
 mass bins considered in Sect.~\ref{sect:Msbin}. For each stellar mass bin
-we measure the occurrence rate-weighted radius of the terrestrial planet peak,
-the gaseous planet peak (where applicable), and the radius valley. The uncertainties in the feature locations
+we measure the occurrence rate-weighted radius of the rocky planet peak,
+the non-rocky planet peak (where applicable), and the radius valley. The uncertainties in the feature locations
 are largely determined by uncertainties in the measured occurrence rates but are also directly affected by
 the following hyperparameters: the $f_{ij}$ smoothing parameter, the minimum detection sensitivity still
 considered reliable,
@@ -1026,9 +1028,9 @@ the $P$ bin width, the $r_p$ bin width, and the imposed upper and
 lower $P$ and $r_p$ limits on each peak. The upper and lower $r_p$ limits are defined based on the visual
 inspection of the $f_{ij}$ maps in \autoref{fig:rphistcomp} and are used to demarcate the
 boundaries of each peak---and by extension---the valley separating the peaks.
-As an example, if the prescribed boundaries on the terrestrial peak are set to 1-50 days and 0.8-1.4 R$_{\oplus}$,
+As an example, if the prescribed boundaries on the rocky peak are set to 1-50 days and 0.8-1.4 R$_{\oplus}$,
 then only the occurrence rates over that subset of the $P-r_p$ parameter space are used to calculate the
-$f_{ij}$-weighted terrestrial peak radius. The range of boundary values for each peak are listed in
+$f_{ij}$-weighted rocky peak radius. The range of boundary values for each peak are listed in
 \autoref{tab:bounds}. In practice, we derive $10^3$ realizations of each $f_{ij}$ map with each realization
 having a unique set of the aforementioned hyperparameters.
 The resulting $f_{ij}$ maps are marginalized over $P$ and the $f_j$-weighted radius of
@@ -1043,8 +1045,8 @@ The depicted $M_s$ values are represented by the median stellar mass within each
 uncertainties are derived from the $16^{\text{th}}$ and $84^{\text{th}}$ percentiles. In computing the
 feature locations we assume that the bimodal $r_p$ distribution is present in all stellar mass bins
 aside from the lowest mass bin (see \autoref{fig:rphistcomp}). In the lowest stellar mass bin we
-only measure the location of the terrestrial planet peak and its edge which marks the transition from
-terrestrial to gaseous planets despite the latter being inherently rare around these types of stars.
+only measure the location of the rocky planet peak and its edge which marks the transition from
+rocky to non-rocky planets despite the latter being inherently rare around these types of stars.
 
 \input{rpvMstable}
 
@@ -1052,8 +1054,8 @@ terrestrial to gaseous planets despite the latter being inherently rare around t
   \centering
   \includegraphics[width=0.9\hsize]{figures/rpvMsFULL_KepK2.png}
   \caption{Evolution of the radius valley features with stellar mass. \emph{Solid markers}:
-    the occurrence rate-weighted locations of the gaseous planet peak (\emph{blue markers}), the
-    radius valley (\emph{black markers}) and the terrestrial planet peak (\emph{red markers})
+    the occurrence rate-weighted locations of the non-rocky planet peak (\emph{blue markers}), the
+    radius valley (\emph{black markers}) and the rocky planet peak (\emph{red markers})
     as a function of host stellar mass. Measurements around Sun-like stars with $M_s>0.8$ M$_{\odot}$ are
     retrieved from \cite{fulton18} (\emph{open circles}). Feature radii from our full sample with a median value of
     $M_s = 0.651^{+0.058}_{-0.096}$ M$_{\odot}$ are depicted as \emph{filled circles}. \emph{Filled squares}
@@ -1077,17 +1079,17 @@ terrestrial to gaseous planets despite the latter being inherently rare around t
 The measured feature radii are compared to those measured in \cite{fulton18} around Sun-like stars with
 $M_s <0.97$ M$_{\odot}$, $M_s \in [0.97,1.11]$ M$_{\odot}$, and $M_s >1.11$ M$_{\odot}$.
 Most notably, the location of each feature measured from our full stellar sample continues the trend of monotonically
-decreasing towards smaller $r_p$ with decreasing $M_s$. The slopes of this decrease for the terrestrial and gaseous
+decreasing towards smaller $r_p$ with decreasing $M_s$. The slopes of this decrease for the rocky and non-rocky
 planet peaks measured with the three points from \cite{fulton18} and from our full stellar sample
 are $\text{d}r_{p,\text{terr}} / \text{d}M_s = 0.40$ and $\text{d}r_{p,\text{gas}} / \text{d}M_s = 0.97$
 respectively. The relative slopes indicate that the most common size of
-gaseous planet decreases more steeply with $M_s$ than the typical size of terrestrial planets. This trend
-is indicative of the effective disappearance of gaseous planets around increasingly lower mass stars
+non-rocky planet decreases more steeply with $M_s$ than the typical size of rocky planets. This trend
+is indicative of the effective disappearance of non-rocky planets around increasingly lower mass stars
 (see \autoref{fig:rphistcomp}) while terrestrial-sized planets appear to persist.
-Furthermore, the reduced slope of the terrestrial peak may be evidence for
+Furthermore, the reduced slope of the rocky peak may be evidence for
 a characteristic planetary core size of $\approx 1$ R$_{\oplus}$ although its exact location is largely uncertain
 due to the limited detection sensitivity to sub-Earth-sized planets. Furthermore, the probablistic classification
-of terrestrial planets as being primoridally rocky or an evaporated core requires additional information
+of rocky planets as being primoridally rocky or an evaporated core requires additional information
 about the planet's orbit and stellar host properties \citep{neil19b}. 
 For example, typical core sizes may be $M_s$-dependent
 as a core size for a fixed core mass is composition dependent and the mass of heavy elements per star
@@ -1121,7 +1123,7 @@ operating in the near-IR will focus heavily on M dwarf planetary systems
 (e.g. CARMENES; \citealt{quirrenbach14}, HPF; \citealt{mahadevan12}, IRD; \citealt{kotani14},
 NIRPS; \citealt{bouchy17}, SPIRou; \citealt{donati18}). In defining target samples
 that are equally complete on either side of the radius valley, it is critically important that the location
-of the transition between terrestrial and gaseous planets is known. In our full stellar sample, which includes
+of the transition between rocky and non-rocky planets is known. In our full stellar sample, which includes
 mid-to-late K dwarfs, the radius valley is centered at $1.54\pm 0.16$ R$_{\oplus}$. Although we remind the
 reader that the exact value is dependent on the planet's separation (see \autoref{fig:fmapF}). A consistent value of
 $1.55^{+0.52}_{-0.50}$ is also recovered---albeit with reduced signficance---around stars later than about M2.5V.
@@ -1131,8 +1133,8 @@ $\sim 1.9$ R$_{\oplus}$ for $M_s \sim 1.2$ M$_{\odot}$ and $\sim 1.7$ R$_{\oplus
 
 \textbf{Furthermore, the opposing slope signs of the radius valley around Sun-like and low mass
 stars has implications for where in the planetary parameter space one expects to find
-predominantly terrestrial and gaseous planets. \autoref{fig:transition} highlights the region of interest for resolving
-the rocky-to-gaseous transition in the $P-r_p$ space. This region is defined by the intermediate region between the
+predominantly rocky and non-rocky planets. \autoref{fig:transition} highlights the region of interest for resolving
+the rocky to non-rocky transition in the $P-r_p$ space. This region is defined by the intermediate region between the
 radius valley slope measured in this work to the slope measured around Sun-like stars from the CKS sample \citep{martinez19}
 where the latter is first scaled
 from its median stellar mass of 1.01 M$_{\odot}$ to the median stellar mass of our sample (0.65 M$_{\odot}$) using the
@@ -1160,11 +1162,11 @@ intersect at $P\sim 23.52$ days such that two regions of interest emerge and are
 \end{align}
 
 \noindent \textbf{These subsets of the $P-r_p$ space define the regions of interest for resolving the
-  rocky-to-gaseous transition around low mass stars. For example, at $P\lesssim 23.52$ days thermally driven
+  rocky to non-rocky transition around low mass stars. For example, at $P\lesssim 23.52$ days thermally driven
   atmospheric mass loss, such as that from photoevaporation, predicts that planets in the set defined by
   Eq.~\ref{eq:transition} should be predominantly rocky. Whereas the gas-poor formation scenario, whose predicted
   radius valley slope differs in sign from that of thermally driven mass loss, predicts that those planets should be
-  predominantly gaseous. These predictions can be robustly tested by targeting planets within the
+  predominantly non-rocky. These predictions can be robustly tested by targeting planets within the
   Eq.~\ref{eq:transition} regions of interest and obtaining precise planetary bulk density measurements.
   As seen in \autoref{fig:transition}, there are only $\sim 5$ planets in the region of interest with $\geq 3\sigma$ bulk
   density measurements. These planets reveal the decrease in bulk density with increasing $r_p$ although insufficient
@@ -1178,9 +1180,9 @@ intersect at $P\sim 23.52$ days such that two regions of interest emerge and are
 \begin{figure}
   \centering
   \includegraphics[width=0.99\hsize]{figures/fmapregion_Msgt0d0_xbin39_ybin26.png}
-  \caption{Regions of interest for resolving the transition between terrestrial and gaseous planets
+  \caption{Regions of interest for resolving the transition between rocky and non-rocky planets
     around low mass stars. The colormap depicts the occurrence rate of small close-in planets from
-    \autoref{fig:fmap}. The rocky-to-gaseous transition measured in this work is highlighted
+    \autoref{fig:fmap}. The rocky to non-rocky transition measured in this work is highlighted
     by the \emph{solid black line}. The transition measured around FGK stars from \cite{martinez19}
     is highlighted by the \emph{dashed black line} after being scaled to the median stellar mass of
     our sample. The shaded regions bounded by
@@ -1188,8 +1190,8 @@ intersect at $P\sim 23.52$ days such that two regions of interest emerge and are
     the transition around low mass stars from precise bulk density measurements. The eleven TOIs
     that fall within this region are marked by an `x'. Also overplotted are planets
     with $\geq 3\sigma$ bulk density measurements from the literature that are classified as having either
-    a terrestrial (\emph{circles}), a gaseous (\emph{triangles}), or an ambiguous (\emph{squares}) bulk
-    composition.}
+    a rocky (\emph{circles}), a gaseous (\emph{triangles}), or an ambiguous (\emph{squares}) bulk
+    composition. Marker colors are indicative of the MAP planet bulk densities.}
   \label{fig:transition}
 \end{figure}
 
@@ -1308,7 +1310,7 @@ As noted in Sect.~\ref{sect:fmap} and evidenced in \autoref{fig:fmap}, the radiu
 void of confirmed planets. If the radius valley around low mass stars is produced solely from the late formation
 of terrestrial planets in a gas-poor environment---as the measured slope of the radius valley suggests
 (\autoref{fig:fmapF})---then the partial filling of the valley may point to a continuum of formed planet sizes
-rather than two distinct populations of terrestrial and gaseous planets. However if the radius valley is instead
+rather than two distinct populations of rocky and non-rocky planets. However if the radius valley is instead
 sculpted by atmospheric post processing---as the radius valley around Sun-like stars seems to be
 \citep{fulton17,fulton18,vaneylen18,martinez19}---then the partial filling of the valley would imply that post
 processing from photoevaporation or core-powered mass loss is less efficient around lower mass stars.
@@ -1352,21 +1354,21 @@ using data from the \kepler{} and \ktwo{} transit surveys. Our main findings are
   \citep[$\text{d}\log{r_p} / \text{d}\log{F} = 0.12\pm 0.02$]{martinez19}. This result 
   supports models of gas-poor terrestrial planet formation without invoking atmospheric escape from photoevaporation,
   core-powered mass loss, or erosion by planetesimal impacts.
-\item The gaseous planet peak in the bimodal occurrence rates is centered at $\sim 2$ R$_{\oplus}$ and effectively
-  vanishes around mid-M dwarfs as terrestrial planets ($\lesssim 1.6$ R$_{\oplus}$) increasingly dominate the close-in
-  planet population towards later spectral types. The relative fraction of terrestrial to gaseous planets increases
+\item The non-rocky planet peak in the bimodal occurrence rates is centered at $\sim 2$ R$_{\oplus}$ and effectively
+  vanishes around mid-M dwarfs as rocky planets ($\lesssim 1.6$ R$_{\oplus}$) increasingly dominate the close-in
+  planet population towards later spectral types. The relative fraction of rocky to non-rocky planets increases
   from $\sim 0.5\pm 0.1 \to 8.5\pm 4.6$ from mid-K to mid-M dwarfs.
 \item The occurrence rate-weighted location of the radius valley---and the central radius of each planet peak---shift
   to smaller
-  sizes with decreasing stellar mass. The slope of the gaseous planet peak's central radius with stellar mass is
-  twice that of the terrestrial peak's slope indicating that the planet population in each stellar mass bin
+  sizes with decreasing stellar mass. The slope of the non-rocky planet peak's central radius with stellar mass is
+  twice that of the rocky peak's slope indicating that the planet population in each stellar mass bin
   tends to converge towards rocky planet cores of $\sim 1$ R$_{\oplus}$ around later spectral types.
 \item Robust inferences to distinguish between various proposed physical mechanisms for the formation of the
   radius valley are expected to require $\mathcal{O}(85,000)$ mid-M dwarfs observed with 2 minute cadence with
   \tess{} or $\mathcal{O}(4700)$ mid-M dwarfs observed with \plato{} based on its expected performance and
   observing strategy.
 \item We advocate that transiting planets around stars with \teff{} $<4700$ K, and whose orbital periods and radii are
-  situated between model predictions of the location of the rocky-to-gaseous transition (see \autoref{fig:transition}),
+  situated between model predictions of the location of the rocky to non-rocky transition (see \autoref{fig:transition}),
   should be targeted by RV campaigns to resolve the location and slope of this transition from precise bulk density
   measurements. 
 \end{itemize}
