--- a/reltable.tex
+++ b/reltable.tex
@@ -1,8 +1,8 @@
 \capstartfalse
 \begin{deluxetable}{cccc}
 \tabletypesize{\small}
-\tablecaption{Relative occurrence rates of close-in terrestrial and gaseous planets around low mass stars\label{tab:rel}}
-\tablehead{Stellar mass & $f_{\mathrm{terr}}$ & $f_{\mathrm{gas}}$ & $f_{\mathrm{terr}}/f_{\mathrm{gas}}$ \\
+\tablecaption{Relative occurrence rates of close-in rocky and non-rocky planets around low mass stars\label{tab:rel}}
+\tablehead{Stellar mass & $f_{\mathrm{rocky}}$ & $f_{\mathrm{non-rocky}}$ & $f_{\mathrm{rocky}}/f_{\mathrm{non-rocky}}$ \\
 range $[\mathrm{M}_{\odot}]$ & $r_p \in [1,1.6]$ & $r_p \in [1.6,2.5]$ &}
 \startdata
 $[0.08,0.90]$ & $0.68\pm 0.07$ & $1.02\pm 0.08$ & $0.66\pm 0.09$ \\
