--- a/rpvMstable.tex
+++ b/rpvMstable.tex
@@ -2,7 +2,7 @@
 \begin{deluxetable}{cccc}
 \tabletypesize{\small}
 \tablecaption{Radius valley features versus stellar mass\label{tab:rpvMs}}
-\tablehead{Stellar mass & Terrestrial peak & Radius valley & Gaseous peak \\
+\tablehead{Stellar mass & Rocky peak & Radius valley & Non-rocky peak \\
 $[\mathrm{M}_{\odot}]$ & $[\text{R}_{\oplus}]$ & $[\text{R}_{\oplus}]$ & $[\text{R}_{\oplus}]$}
 \startdata
 $0.651^{+0.058}_{-0.096}$ & $1.118^{+0.151}_{-0.148}$ & $1.543^{+0.160}_{-0.160}$ & $2.068^{+0.211}_{-0.205}$ \\
